src/snapshots/bl__tests__snapshots__cmd_page__close.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Close a browser page by index (default: current page)

Usage: bl page close [OPTIONS] [index]

Arguments:
  [index]  Index of the page to close (default: current page)

Options:
      --headless  Hide browser window (visible by default)
  -v, --verbose   Enable debug logging
      --json      Output as JSON
  -h, --help      Print help

Examples:
  bl page close
  # Close current page (index 0)

  bl page close 1
  # Close page at index 1
