src/snapshots/bl__tests__snapshots__cmd_page__new.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Open a new browser page

Usage: bl page new [OPTIONS] [url]

Arguments:
  [url]  URL to navigate the new page to (omit for a blank page)

Options:
      --headless  Hide browser window (visible by default)
  -v, --verbose   Enable debug logging
      --json      Output as JSON
  -h, --help      Print help

Examples:
  bl page new
  # Open a blank new page

  bl page new https://example.com
  # Open a new page and navigate to URL
