src/snapshots/bl__tests__snapshots__cmd_page__switch.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Switch to a browser page by index or URL substring

Usage: bl page switch [OPTIONS] <target>

Arguments:
  <target>  Page index, or a substring to match against page URLs

Options:
      --headless  Hide browser window (visible by default)
  -v, --verbose   Enable debug logging
      --json      Output as JSON
  -h, --help      Print help

Examples:
  bl page switch 1
  # Switch to page at index 1

  bl page switch google.com
  # Switch to page containing "google.com" in URL
